# m2-deep-research

./: .env.example  .gitignore  DESIGN.md  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json  ui-spec.md  vitest.config.ts
core/: __main__.py  config.py
core/database/: schema.py  session.py
core/export/: __init__.py  html.py  markdown.py
core/handlers/: chat.py  plan.py  research.py
core/models/: __init__.py  base.py  minimax.py
core/protocol/: __init__.py  emitter.py  handler.py  types.py
core/search/: __init__.py  base.py  exa.py
docs/plans/: 2026-01-04-researchos-v1.md
old/: 2026-01-02-researchos-design.md  cozy-puzzling-duckling.md
src/: index.tsx
src/app/: App.tsx  state.ts  useKeyboardNavigation.ts  useResearchStream.ts
src/components/footer/: ActiveStep.tsx  FooterInput.tsx
src/components/header/: Header.tsx  ModeTabs.tsx  StatusPill.tsx
src/components/layout/: Divider.tsx  Frame.tsx  Logo.tsx  (+1 more)
src/protocol/: client.ts  types.ts
src/ui/: constants.ts  terminalCaps.ts  theme.ts
test/: app-integration.test.tsx  app.test.tsx  client.test.ts  e2e.test.ts  footer.test.tsx  header.test.tsx  index.test.ts  layout-frame.test.tsx  logo.test.tsx  messages.test.tsx  protocol-types.test.ts  state.test.ts  terminal-caps.test.ts  theme.test.ts
tests/py/: conftest.py  test_config.py  test_database.py  test_emitter.py  test_export.py  test_handlers.py  test_main.py  test_minimax.py  test_plan_handler.py  test_protocol_handler.py  test_protocol_modes.py  test_protocol_types.py  test_research_handler.py  test_search.py
(+4 files in other folders)
